--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-svg": "^12.4.1",
     "react-native-toast-notifications": "^3.3.1",
+    "react-native-video": "^5.2.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
