--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@gorhom/bottom-sheet": "^4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-big-list": "^1.5.4",
