--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "axios": "^1.1.3",
+    "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-animated-searchbox": "^0.0.1",
     "react-native-big-list": "^1.5.4",
     "react-native-calendars": "^1.1288.3",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-picker": "^4.8.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-mmkv": "^2.4.3",
+    "react-native-mmkv": "^2.5.1",
     "react-native-paper": "5.0.0-rc.10",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-redash": "^18.0.0",
