--- a/ios/jolJakProjectTestTests/Info.plist
+++ b/ios/jolJakProjectTestTests/Info.plist
@@ -21,10 +21,10 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Your message to user when the photo library is accessed for the first time</string>
+	<string>$(PRODUCT_NAME)would like access to your photo gallery</string>
 	<key>NSCameraUsageDescription</key>
-	<string>The camera is accessed for the first time</string>
+	<string>$(PRODUCT_NAME)would like to use your camera</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>The microphone is accessed for the first time</string>
+	<string>$(PRODUCT_NAME)would like to use your microphone (for videos)</string>
 </dict>
 </plist>
